Fix minor issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,5 +7,5 @@ max-line-length = 100
 max-args = 8
 max-attributes = 12
 
-[tool.pylint.messages_control]
-disable = E0402,R0903
+[pylint.messages_control]
+disable = E0402,R0903,W0236
