--- a/setup.cfg
+++ b/setup.cfg
@@ -2,10 +2,10 @@
 ignore = E701
 max-line-length = 100
 
-[tool.pylint]
+[pylint.checkers]
 max-line-length = 100
 max-args = 8
 max-attributes = 12
 
-[tool.pylint.messages_control]
-disable = E0402,R0903
+[pylint.messages_control]
+disable = E0402,R0903,W0236
